@@ -1,3 +1,9 @@
+Tue Apr 10 18:45:00 BST 2006    Simon Arlott <oidentd@fire.lp0.eu>
+
+    * Fix bug handling NAT with a different destination port on Linux.
+
+    * Fix forwarding when the destination port is different.
+
 Mon May 22 00:20:15 EDT 2006    Ryan McCabe <ryan@numb.org>
 
     * Released as version 2.0.8.
